// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllVNodeManipulations.vue Attribute and input value not shown 1`] = `
<div>
  <h1 title="[object Object]">
    H1
  </h1>
  <input>
</div>
`;

exports[`AllVNodeManipulations.vue Attribute and input value shown 1`] = `
<div>
  <h1 title="{a:{b:34},c:[[],3,true]}">
    H1
  </h1>
  <input value="'moo'">
</div>
`;

exports[`AllVNodeManipulations.vue Attribute value hidden, input value shown 1`] = `
<div>
  <h1 title="[object Object]">
    H1
  </h1>
  <input value="'moo'">
</div>
`;

exports[`AllVNodeManipulations.vue Attribute value shown, input value hidden 1`] = `
<div>
  <h1 title="{a:{b:34},c:[[],3,true]}">
    H1
  </h1>
  <input>
</div>
`;
